--- a/story.html
+++ b/story.html
@@ -149,11 +149,11 @@
       </p>
       <p><br/></p>
       <p>
-        とき を 同じくして 王国 には いへん が おこり はじめて いた。
-        しぜんさいがい や てんこう の ふじゅん による ふさく が 目に 見えて ふえた。
+        とき を 同じく して 王国 には いへん が おこり はじめて いた。
+        しぜんさいがい や てんこう の ふじゅん に よる ふさく が 目に 見えて ふえた。
       </p>
       <p>
-        ひとびと は 光の めがみ ライラ の かご が うすれ ヤミの 女王 アリル が ふっかつ するのでは ないか と うわさ するよう に なった。
+        ひとびと は 光 の めがみ ライラ の かご が うすれ ヤミ の 女王 アリル が ふっかつ するのでは ないか と うわさ するよう に なった。
       </p>
       <p><br/></p>
       <p>
@@ -166,10 +166,11 @@
       </p>
       <p>
         きょう は しんえいたい に とって とくべつ な くんれん の 日 だ。
-        まんがいち の じたい に へいか を だっしゅつ させる いわば ひなん くんれん で ある。
+        まんがいち の じたい に へいか を だっしゅつ させる けいろ の かくにん。
+        いわば ひなん くんれん で ある。
       </p>
       <p>
-        この へいわ な 王国 で そんな じたい が あるの だろうか。
+        この へいわ な 王国 で そんな じたい が あるの だろう か。
         いや ふあん の め は ある。
         さっこん の やくさい に ひとびと の ふあん が たかまって いる。
       </p>
@@ -204,7 +205,7 @@
       <p><br/></p>
       <p>
         フォ フォ フォ。<br/>
-        こんな ところ で めいそう に ふけって おられるのは 今 を ときめく しんえい たいちょう どの では ないか。
+        こんな ところ で めいそう に ふけって おられる のは 今 を ときめく しんえい たいちょう どの では ないか。
       </p>
       <p><br/></p>
       <p>
@@ -241,7 +242,7 @@
         まいとし こうれい の 光 の ぎしき を とり行なう 大そうじょう さま の ごえい として つきそって きた の である。
       </p>
       <p>
-        光の めがみ ライラ に つきしたがう せいれい セイレン を まつる そうごん な さいし。
+        光 の めがみ ライラ に つきしたがう せいれい セイレン を まつる そうごん な さいし。
         しかし ヨシュナ は そらぞらしい きもち で それ を ながめ て いた。
         ろうそく に 火 を ともした ぐらい で かみがみ の ごきげん など とれる ものか。
       </p>
@@ -258,7 +259,7 @@
         フォ フォ フォ。<br/>
         ごくろう だの。
         しかし 今年 は ここから が ほんばん じゃ。
-        せいどう の おく に ある れいびょう も まいらねば ならん。
+        せいどう の おく に ある れいびょう にも まいらねば ならん。
         としおいた ワシ に とびら は あけられぬ。
         ヨシュナ よ ついて きて おくれ。
       </p>
@@ -316,12 +317,12 @@
         けいけん な しんと とは いえない ヨシュナ で あった が むね の うち から わきあがる ちから と こうようかん に おどろき を かくせない。
       </p>
       <p>
-        ふたたび りんと した せいじゃく が おとずれた とき せきひつ の ひとつ が おとを 立てて ひらいた。
+        ふたたび りんと した せいじゃく が おとずれた とき ちゅうおう の せきひつ が おとを 立てて ひらいた。
         その中 に ちかへ と つづく かいだん が 見える。
       </p>
       <p>
         ヨシュナ は かいだん の まえ で 立ち つくした。
-        今 自分 は 大きな なにか に まきこまれて いる。
+        自分 は 大きな なにか に まきこまれて いる。
         しかし それが なにか は わからない。
       </p>
       <p>
@@ -345,13 +346,19 @@
       </p>
       <p>
         どれくらい あるいた だろう。
-        えんえん と くだりざか を おりた あと は めいろ の ように ぐねぐね と いりくんだ みち に なった。
+        えんえん と さかみち を くだった あと は めいろ の ように ぐねぐね と いりくんだ みち に なった。
         れいびょう の おく に こんなに ひろい くうかん が ひろがって いた とは。
       </p>
       <p>
-        すすむ ほど に ヤミ は ふかまり じめじめ と はだ に まとわり つく。
+        すすむ ほど に ヤミ は ふかまり じめじめ と ヨシュナ の はだ に まとわり つく。
         光 の じいん とは まぎゃく の ふかい で 人を ふあん に させる ばしょ。
         光 の きょうぎ に てらせば じごく の ような ばしょ。
+      </p>
+      <p><br/></p>
+      <p>
+        ヨシュナ よ。<br/>
+        そなた も かんじて おる じゃろう。
+        この まがまがしく も きょうだい な ヤミ を。
       </p>
       <p><br/></p>
       <p>
@@ -369,7 +376,7 @@
       <p>
         まず は この めいろ を ぬけよ。
         なに むずかしい こと では ない。
-        しんけい を とぎすませば めいろ など あって なき に ひとしい。
+        こころ を とぎすませば めいろ など あって なき に ひとしい。
       </p>
       <p>
         フォ フォ フォ。
@@ -381,7 +388,9 @@
       </p>
       <p>
         めいろ を ぬけた 先には くうかん が ひろがって いた。
-        じいん や せいどう に ちかい ものの それ とは にても につかない はいち の こうぞうぶつ が みえる。
+        くらくて よく 見えない が ふかく おおきな あな が ある ようだ。
+        へきめん に いくつか の とびら が 見える。
+        ある もの は たかい ところ に また ある ものは ひくい ところ に。
       </p>
       <p><br/></p>
       <p>
@@ -390,23 +399,24 @@
         この とびら の むこう は ヤミ に すまう ものども の せかい。
       </p>
       <p>
-        そこ に おわす のは かみ とも あくま とも いわれる そんざい。
-        おぬし を 生かし おぬし を ころす せかい の ことわり。
+        ヨシュナ よ きけ。
+        ヤミ の 女王 アリル ふっかつ の うわさ は あやまり じゃ。
+        光 の めがみ ライラ が つねに ある ように ヤミの 女王 アリル も また つねに ある。
+        ふっかつ どころ か そもそも ほろび ては おらぬ。
       </p>
       <p>
-        ふたつ の せかい を むすぶ とびら を ぬけた もの だけ が ゆきき を ゆるされる。
-        かんげい は されぬ が きょぜつ も されぬ。
-        じんち を こえた ちから に はばまれ そして みちびかれる じゃろう。
-      </p>
-      <p>
-        ヨシュナ よ おそれるで ないぞ。
-        おそれ は まなこ を くもらせる。
+        せかい を みたす 光 と ヤミ どちら も ふえる ことも へる ことも ない。
+        ただ ときと して かたより が あらわれる のみ。
       </p>
       <p><br/></p>
       <p>
-        光 の きょうぎ とは ちがう なぞめいた ことば に ヨシュナ は うすきみ の わるさ を おぼえた。
+        アリル は つねに ある ... ?
+        大そうじょう さま は 今 光 の きょうぎ に かたられる かみがみ の ものがたり を まっこう から ひてい している。
+      </p>
+      <p>
+        ヨシュナ は ゴクリ と つば を のみこんだ。
         大そうじょう さま は いたん なの だろうか。
-        しかし 今 は この ろうじん と ともに すすむ しか ないのだ。
+        なぜ この ような はなし を 自分 に するの だろうか。
       </p>
     </section>
     <section id="stage05:Dungeon" class="story bitfont">
@@ -414,32 +424,36 @@
         <span class="index"></span><br/><span class="name"></span>
       </p>
       <p>
-        くらい みち の おく に なにものか の けはい を かんじる。
+        くらい みち の おく に なにもの かの けはい を かんじる。
         ヨシュナ は きんちょう した おももち で こし の けん に 手を かけた。
       </p>
       <p><br/></p>
       <p>
-        フォ フォ フォ。<br/>
         ヨシュナ よ けん を ぬいて は ならぬ。
         ヤミ の じゅうにん たち を きずつけては ならぬ。
         かれら も ただ かれら の いのち を まっとう している に すぎぬ。
         にんげん と なんら かわり は ないの じゃ。
       </p>
-      <p><br/></p>
       <p>
-        きょうぎ に はんする ことば の かずかず。
-        やはり 大そうじょう さま は いたん としか おもえない。
-        そんな ヨシュナ の おもい を さっした のか 大そうじょう さま は ことば を つづける。
+        かれら の ねいき が きこえる か ?
+        ひさかた ぶり の ふかい ふかい ヤミ に つつまれ て ここち よく ねむって おる。
+        あどけ ない では ないか。
       </p>
       <p><br/></p>
       <p>
-        ヨシュナ よ きけ。
-        せかい を みたす 光 と ヤミ どちら も ふえる ことも へる ことも ない。
-        ただ ときと して かたより が あらわれる のみ。
+        し しかし ... 。
+        先に やらねば こちら が やられ ましょう。
+        この ふかい ヤミ では  大そうじょう さま を まもりぬく こと が むずかしゅう ございます。
+      </p>
+      <p><br/></p>
+      <p>
+        フォ フォ フォ。<br/>
+        あんずる で ない。
+        かれら は 血に うえた けもの では ない。
+        そなた が 手を ださねば なにも おこらぬ。
       </p>
       <p>
-        今 まさに かたより が しょうじて おる。
-        これ を たださねば のんき に しんこう など して おれぬ。
+        なにより この ヤミ を かれら に もたらした のは われわれ にんげん ぞ。
       </p>
     </section>
     <section id="stage09:Core" class="story bitfont">
@@ -452,19 +466,29 @@
       </p>
       <p>
         まっくら やみ の その先 に さらに くらい なにか が うごめいて いる。
-        あれは ... ヤミの 女王 アリル !?
-      </p>
-      <p>
-      </p>
-      <p>
+        すがたかたち は ひと の よう だが すさまじい しょうき を はなって いる。
       </p>
       <p><br/></p>
+      <p>
+        ヨシュナ よ。
+        あれ に 見える のが ヤミの 女王 アリル またの なを 光の めがみ ライラ。
+        ちひょう の 光 に おしやられ ぎょうしゅく した ヤミ の けしん。
+      </p>
+      <p>
+        へいわ を きょうじゅ し ヤミ を おそれた にんげん が 光 を ささげ すぎた けっか ヤミ は ちか に あつまり ライラ と なった。
+      </p>
+      <p>
+        ヨシュナ。
+        せかい に ちょうわ を もたらす もの。
+        光 も ヤミ も ひとしく ささげ かみ を しずめ たまえ。
+      </p>
     </section>
     <section id="stage10:Lyra" class="story bitfont">
       <p class="title">
         <span class="index"></span><br/><span class="name"></span>
       </p>
-      <p></p>
+      <p>
+      </p>
       <p><br/></p>
     </section>
     <section id="stage11:Epilogue" class="story bitfont">
