--- a/story.html
+++ b/story.html
@@ -153,7 +153,7 @@
         しぜんさいがい や てんこう の ふじゅん に よる ふさく が 目に 見えて ふえた。
       </p>
       <p>
-        ひとびと は 光 の めがみ ライラ の かご が うすれ ヤミ の 女王 アリル が ふっかつ するのでは ないか と うわさ するよう に なった。
+        ひとびと は 光の めがみ ライラ の かご が うすれ ヤミの 女王 アリル が ふっかつ するのでは ないか と うわさ するよう に なった。
       </p>
       <p><br/></p>
       <p>
@@ -165,7 +165,7 @@
         <span class="index"></span><br/><span class="name"></span>
       </p>
       <p>
-        きょう は しんえいたい に とって とくべつ な くんれん の 日 だ。
+        きょう は しんえいたい に とって とくべつ な くんれん の 日だ。
         まんがいち の じたい に へいか を だっしゅつ させる けいろ の かくにん。
         いわば ひなん くんれん で ある。
       </p>
@@ -176,7 +176,7 @@
       </p>
       <p>
         ひとびと は ふあん の はけぐち に わかりやすい げんいん を もとめて いる。
-        ヤミ の 女王 アリル ふっかつ の うわさ も しかり。
+        ヤミの 女王 アリル ふっかつ の うわさ も しかり。
         こと に よると へいか や 大そうじょう さま あるいは ヨシュナ さえも ひょうてき に なりえる。
         人の 上に 立つ もの は 人の 目に つく もの でも ある。
       </p>
@@ -222,10 +222,10 @@
         大い に なやむ が よい。
         よい こと も わるい こと も あり の まま に うけいれ て みよ。
         ぜんあく に とらわれ ては ならんぞ。
-        それ は 光 と カゲ の よう に ものごと の そくめん で しか ない の じゃ。
+        それ は 光と カゲ の よう に ものごと の そくめん で しか ない の じゃ。
       </p>
       <p>
-        そろそろ きゅうけい も おわり に して せいどう に 光 を ともして きて おくれ。
+        そろそろ きゅうけい も おわり に して せいどう に 光を ともして きて おくれ。
         めがみ さま の しゅくふく で おぬし の こころ も 少しは はれる じゃろう。
       </p>
       <p>
@@ -239,16 +239,16 @@
       </p>
       <p>
         ミハラクイ山 の ちゅうふく に ある いわ の せいどう に ヨシュナ は いた。
-        まいとし こうれい の 光 の ぎしき を とり行なう 大そうじょう さま の ごえい として つきそって きた の である。
+        まいとし こうれい の 光の ぎしき を とり行なう 大そうじょう さま の ごえい として つきそって きた の である。
       </p>
       <p>
-        光 の めがみ ライラ に つきしたがう せいれい セイレン を まつる そうごん な さいし。
+        光の めがみ ライラ に つきしたがう せいれい セイレン を まつる そうごん な さいし。
         しかし ヨシュナ は そらぞらしい きもち で それ を ながめ て いた。
         ろうそく に 火 を ともした ぐらい で かみがみ の ごきげん など とれる ものか。
       </p>
       <p>
         こうき な かたがた には りかい できまい が おてんとう さま だけ を あがめた ところ で なんに なる。
-        かて を はぐくむ ため には 雨も 風も よる の ヤミ さえ ひつよう なのだ。
+        かて を はぐくむ ため には 雨も 風も よる の ヤミさえ ひつよう なのだ。
         しんえいたい たいちょう と なった 今 くち が さけて も いえない が。
       </p>
       <p><br/></p>
@@ -313,7 +313,7 @@
         <span class="index"></span><br/><span class="name"></span>
       </p>
       <p>
-        あたたかい しゅくふく の 光 が ヨシュナ を つつんだ。
+        あたたかい しゅくふく の 光が ヨシュナ を つつんだ。
         けいけん な しんと とは いえない ヨシュナ で あった が むね の うち から わきあがる ちから と こうようかん に おどろき を かくせない。
       </p>
       <p>
@@ -350,21 +350,21 @@
         れいびょう の おく に こんなに ひろい くうかん が ひろがって いた とは。
       </p>
       <p>
-        すすむ ほど に ヤミ は ふかまり じめじめ と ヨシュナ の はだ に まとわり つく。
-        光 の じいん とは まぎゃく の ふかい で 人を ふあん に させる ばしょ。
-        光 の きょうぎ に てらせば じごく の ような ばしょ。
+        すすむ ほど に ヤミは ふかまり じめじめ と ヨシュナ の はだ に まとわり つく。
+        光の じいん とは まぎゃく の ふかい で 人を ふあん に させる ばしょ。
+        光の きょうぎ に てらせば じごく の ような ばしょ。
       </p>
       <p><br/></p>
       <p>
         ヨシュナ よ。<br/>
         そなた も かんじて おる じゃろう。
-        この まがまがしく も きょうだい な ヤミ を。
+        この まがまがしく も きょうだい な ヤミを。
       </p>
       <p><br/></p>
       <p>
         大そうじょう さま。<br/>
         ヤミの 女王 アリル の ふっかつ の うわさ ... ほんとう なの でしょう か ?
-        この ふかい ヤミ は アリル の ちから に よる もの なの でしょう か ?
+        この ふかい ヤミは アリル の ちから に よる もの なの でしょう か ?
       </p>
       <p><br/></p>
       <p>
@@ -389,6 +389,8 @@
       <p>
         めいろ を ぬけた 先には くうかん が ひろがって いた。
         くらくて よく 見えない が ふかく おおきな あな が ある ようだ。
+      </p>
+      <p>
         へきめん に いくつか の とびら が 見える。
         ある もの は たかい ところ に また ある ものは ひくい ところ に。
       </p>
@@ -396,26 +398,25 @@
       <p>
         フォ フォ フォ。<br/>
         ひとの ちから が およぶ せかい は ここまで じゃ。
-        この とびら の むこう は ヤミ に すまう ものども の せかい。
+        この とびら の むこう は ヤミに すまう ものども の せかい。
       </p>
       <p>
         ヨシュナ よ きけ。
-        ヤミ の 女王 アリル ふっかつ の うわさ は あやまり じゃ。
-        光 の めがみ ライラ が つねに ある ように ヤミの 女王 アリル も また つねに ある。
-        ふっかつ どころ か そもそも ほろび ては おらぬ。
+        アリル ふっかつ の うわさ ... あれ は ただしく ない。
+        そもそも アリル は ほろび ては おらぬ。
+        光の めがみ ライラ が つねに ある ように ヤミの 女王 アリル も また つねに ある。
       </p>
       <p>
-        せかい を みたす 光 と ヤミ どちら も ふえる ことも へる ことも ない。
+        せかい を みたす 光と ヤミ どちら も ふえる ことも へる ことも ない。
         ただ ときと して かたより が あらわれる のみ。
       </p>
       <p><br/></p>
       <p>
         アリル は つねに ある ... ?
-        大そうじょう さま は 今 光 の きょうぎ に かたられる かみがみ の ものがたり を まっこう から ひてい している。
+        大そうじょう さま は 今 光の かみがみ の ものがたり を まっこう から ひてい している。
       </p>
       <p>
         ヨシュナ は ゴクリ と つば を のみこんだ。
-        大そうじょう さま は いたん なの だろうか。
         なぜ この ような はなし を 自分 に するの だろうか。
       </p>
     </section>
@@ -430,13 +431,13 @@
       <p><br/></p>
       <p>
         ヨシュナ よ けん を ぬいて は ならぬ。
-        ヤミ の じゅうにん たち を きずつけては ならぬ。
+        ヤミの じゅうにん たち を きずつけては ならぬ。
         かれら も ただ かれら の いのち を まっとう している に すぎぬ。
         にんげん と なんら かわり は ないの じゃ。
       </p>
       <p>
         かれら の ねいき が きこえる か ?
-        ひさかた ぶり の ふかい ふかい ヤミ に つつまれ て ここち よく ねむって おる。
+        ひさかた ぶり の ふかい ふかい ヤミに つつまれ て ここち よく ねむって おる。
         あどけ ない では ないか。
       </p>
       <p><br/></p>
@@ -453,7 +454,7 @@
         そなた が 手を ださねば なにも おこらぬ。
       </p>
       <p>
-        なにより この ヤミ を かれら に もたらした のは われわれ にんげん ぞ。
+        なにより この ヤミを かれら に もたらした のは われわれ にんげん ぞ。
       </p>
     </section>
     <section id="stage09:Core" class="story bitfont">
@@ -466,21 +467,28 @@
       </p>
       <p>
         まっくら やみ の その先 に さらに くらい なにか が うごめいて いる。
-        すがたかたち は ひと の よう だが すさまじい しょうき を はなって いる。
+        すがたかたち は 人の よう だが すさまじい しょうき を はなって いる。
       </p>
       <p><br/></p>
       <p>
         ヨシュナ よ。
-        あれ に 見える のが ヤミの 女王 アリル またの なを 光の めがみ ライラ。
-        ちひょう の 光 に おしやられ ぎょうしゅく した ヤミ の けしん。
+        あれ に 見える のが ヤミの 女王 アリル。
+        またの なを 光の めがみ ライラ。
+        ちひょう の 光に おしやられ ぎょうしゅく した ヤミの けしん。
       </p>
       <p>
-        へいわ を きょうじゅ し ヤミ を おそれた にんげん が 光 を ささげ すぎた けっか ヤミ は ちか に あつまり ライラ と なった。
+        へいわ を きょうじゅ し ヤミを おそれた にんげん が ちひょう を 光で おおい つくした。
+        それが ゆえに ヤミは ちかに あつまり ライラ と なった。
+      </p>
+      <p><br/></p>
+      <p>
+        大そうじょう さま。<br/>
+        それが まこと で あれば じいん は いつわり の きょうぎ を といて いるの ですか ?
+        やくさい は にんげん が ひきおこし て きた もの なの ですか ?
       </p>
       <p>
-        ヨシュナ。
-        せかい に ちょうわ を もたらす もの。
-        光 も ヤミ も ひとしく ささげ かみ を しずめ たまえ。
+        なぜ ... なぜ ... 。<br/>
+        なぜ それを ヨシュナ に はなす の ですか ?
       </p>
     </section>
     <section id="stage10:Lyra" class="story bitfont">
@@ -488,15 +496,94 @@
         <span class="index"></span><br/><span class="name"></span>
       </p>
       <p>
+        アリア と ライラ は まざりあい ひとつ に なった。
+        つよい 光と こい ヤミが こうご に あらわれ せいし に たえない。
+        それ は たゆたい ながら ゆっくり と ヨシュナ に ちかづいて くる。
       </p>
       <p><br/></p>
+      <p>
+        ヨシュナ よ きを つけよ。
+        それ は まだ まざり きって おらぬ。
+        ひさかた ぶりの ちょうわ から ぬけだそう と もがいて おる。
+        ちょうわ を もたらした そなた に つよく ひかれ て おる。
+      </p>
+      <p>
+        いそぎ このば を はなれよ。
+        なに ワシ の こと は ほうって おけ。
+        けっして ふりかえるでは ないぞ ... !
+      </p>
+      <p><br/></p>
+      <p>
+        大そうじょう さま を おいて は いけない。
+        だが それ は あきらか に ヨシュナ だけ を めざして いる。
+        行くしか ない。
+      </p>
+      <p>
+        むがむちゅう で はしり ながら ヨシュナ の まぶた には おさなき ひび が うかんで いた。
+      </p>
+      <p>
+        のやま を かけまわって あそんだ ひび を。
+        せんれい を うけた あの 日を。
+        みち に まよい くらい どうくつ で ふるえて いた あの よる を。
+      </p>
+      <p>
+        なぜ 今まで わすれて いたの だろう。
+        あの日 よる の やみ が ヨシュナ を 見つめて いた ことを。
+      </p>
     </section>
     <section id="stage11:Epilogue" class="story bitfont">
       <p class="title">
         <span class="index"></span><br/><span class="name"></span>
       </p>
-      <p></p>
+      <p>
+        どれくらい はしった だろうか。
+      </p>
+      <p>
+        いつの まに か いわば の みち は ほそう され ととのい まるで とりで の つうろ の ようだ。
+      </p>
       <p><br/></p>
+      <p>
+        ヨシュナ よ。
+        きこえるか?
+      </p>
+      <p><br/></p>
+      <p>
+        大そうじょう さま !
+        ごぶじ でしたか。
+      </p>
+      <p><br/></p>
+      <p>
+        さて どうだか の。
+        ワシ は まだ ちの そこ に おる。
+        くうかん に ゆがみ が しょうじて おぬし に こえ が とどいて おる ようじゃ。
+      </p>
+      <p>
+        ヨシュナ よ。
+        せかい に ちょうわ を もたらす もの。
+      </p>
+      <p>
+        そなた は 光と ヤミに つつまれ だいち に はぐぐまれた ゆえに しんじつ を しる ものと なった。
+      </p>
+      <p><br/></p>
+      <p>
+        大そうじょう さま !
+      </p>
+      <p>
+        しんじつ を むねに いつわり の 中に いきる のは くるしゅう ございます。 
+        どうか ヨシュナ の みち を てらし たまえ。
+      </p>
+      <p><br/></p>
+      <p>
+        フォ フォ フォ<br/>
+        あんずる こと は ない。
+        人が あんねい を もとめる こころ も また しんじつ。
+        なにも かも いままで どおり で よいの じゃ。
+      </p>
+      <p>
+        はやく ゆけ。
+        くうかん の ゆがみ を ぬって はしれ。
+        くうかん の ゆがみ に のみこまれるで ないぞ。
+      </p>
     </section>
     </div><!-- cotainer -->
   </body>
